// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parking it renders 1`] = `
Array [
  <h3
    aria-controls="panel-parking"
    aria-expanded={false}
    className="c-expandable-block__header "
    id="header-parking"
    onClick={[Function]}
    onKeyPress={[Function]}
    role="button"
    tabIndex={0}
  >
    <i
      aria-hidden="true"
      className="fa fa-square-parking notranslate c-expandable-block__header-icon"
    />
    <div
      className="c-expandable-block__header-text"
    >
      Parking
      <span
        className="fa c-expandable-block__header-caret"
        dangerouslySetInnerHTML={
          Object {
            "__html": "&#xF107;",
          }
        }
      />
    </div>
  </h3>,
  <noscript>
    <style>
      #header-parking { display: none; }
    </style>
    <h3
      className="c-expandable-block__header"
    >
      <span
        aria-hidden="true"
        className="notranslate c-expandable-block__header-icon"
        dangerouslySetInnerHTML={
          Object {
            "__html": "fa-square-parking",
          }
        }
      />
      Parking
      <span
        className="fa c-expandable-block__header-caret"
        dangerouslySetInnerHTML={
          Object {
            "__html": "&#xF106;",
          }
        }
      />
    </h3>
    <div
      className="c-expandable-block__panel"
      role="region"
    >
      <div>
        <h4>
          South Station Bus Terminal Garage
        </h4>
        <p>
          <a
            className="c-call-to-action"
            href="https://maps.google.com/?q=42.349838,-71.055963"
            rel="noopener noreferrer"
            target="_blank"
          >
            Get directions to this parking facility
          </a>
        </p>
        <p
          id="parking-utilization"
        >
          Parking spots at South Station Bus Terminal Garage fill up quickly. We recommend arriving before 6:00 AM.
        </p>
        <div
          id="parking-capacity"
        >
          <div
            className="u-small-caps"
          >
            Capacity
          </div>
          <ul
            className="list-unstyled"
          >
            <li>
              <strong>
                Total parking spaces: 
              </strong>
              210
            </li>
            <li>
              <strong>
                Accessible spaces: 
              </strong>
              4
            </li>
            <li>
              <strong>
                Overnight Parking: 
              </strong>
              Available
            </li>
            <li>
              <strong>
                Type: 
              </strong>
              Garage
            </li>
          </ul>
        </div>
        <div
          id="parking-payment"
        >
          <div
            className="u-small-caps"
          >
            Payment
          </div>
          <ul
            className="list-unstyled"
          >
            <li>
              <strong>
                Payment Methods: 
              </strong>
              Credit/Debit Card, Cash
            </li>
            <li
              id="parking-mobile-app"
            >
              <strong>
                Mobile app: 
              </strong>
              <a
                href="http://www.propark.com/madeupapp"
              >
                ProParkApp
              </a>
              
            </li>
            <li>
              <strong>
                Daily fee: 
              </strong>
              Hourly: 30 min: $5, 1 hr: $10, 1.5 hrs: $15, 2 hrs: $20, 2.5 hrs: $25, 3+ hrs: $30 | Daily Max: $30 | Early Bird (in by 8:30 AM, out by 6 PM): $26 | Nights/Weekends: $10
            </li>
            <li>
              <strong>
                Monthly pass: 
              </strong>
              $150 regular, $445 overnight
            </li>
          </ul>
        </div>
        <div
          id="parking-manager"
        >
          <div
            className="u-small-caps"
          >
            Management
          </div>
          <ul
            className="list-unstyled"
          >
            <li>
              <strong>
                Managed by: 
              </strong>
              ProPark
            </li>
            <li>
              <strong>
                Contact: 
              </strong>
              <a
                href="https://www.propark.com/propark-locator2/south-station-garage/"
              >
                ProPark
              </a>
            </li>
            <li>
              <strong>
                Contact phone: 
              </strong>
              617-345-0202
            </li>
          </ul>
        </div>
        <div
          className="callout"
          id="parking-note"
        >
          <strong>
            Note: 
          </strong>
          An example note
        </div>
      </div>
      <p>
        <a
          className="c-call-to-action"
          href="/parking"
        >
          Learn more about parking
        </a>
      </p>
    </div>
  </noscript>,
]
`;

exports[`Parking via enzyme-to-json it displays parking info when opened and inner html 1`] = `
<Parking>
  <ExpandableBlock>
    <h3
      aria-controls="panel-parking"
      aria-expanded={true}
      className="c-expandable-block__header "
      id="header-parking"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex={0}
    >
      <i
        aria-hidden="true"
        className="fa fa-square-parking notranslate c-expandable-block__header-icon"
      />
      <div
        className="c-expandable-block__header-text"
      >
        Parking
        <span
          className="fa c-expandable-block__header-caret"
          dangerouslySetInnerHTML={
            Object {
              "__html": "&#xF106;",
            }
          }
        />
      </div>
    </h3>
    <div
      aria-labelledby="header-parking"
      className="c-expandable-block__panel "
      id="panel-parking"
      role="region"
      tabIndex={0}
    >
      <Lot>
        <div>
          <h4>
            South Station Bus Terminal Garage
          </h4>
          <p>
            <a
              className="c-call-to-action"
              href="https://maps.google.com/?q=42.349838,-71.055963"
              rel="noopener noreferrer"
              target="_blank"
            >
              Get directions to this parking facility
            </a>
          </p>
          <p
            id="parking-utilization"
          >
            Parking spots at South Station Bus Terminal Garage fill up quickly. We recommend arriving before 6:00 AM.
          </p>
          <div
            id="parking-capacity"
          >
            <div
              className="u-small-caps"
            >
              Capacity
            </div>
            <ul
              className="list-unstyled"
            >
              <li>
                <strong>
                  Total parking spaces: 
                </strong>
                210
              </li>
              <li>
                <strong>
                  Accessible spaces: 
                </strong>
                4
              </li>
              <li>
                <strong>
                  Overnight Parking: 
                </strong>
                Available
              </li>
              <li>
                <strong>
                  Type: 
                </strong>
                Garage
              </li>
            </ul>
          </div>
          <div
            id="parking-payment"
          >
            <div
              className="u-small-caps"
            >
              Payment
            </div>
            <ul
              className="list-unstyled"
            >
              <li>
                <strong>
                  Payment Methods: 
                </strong>
                Credit/Debit Card, Cash
              </li>
              <li
                id="parking-mobile-app"
              >
                <strong>
                  Mobile app: 
                </strong>
                <a
                  href="http://www.propark.com/madeupapp"
                >
                  ProParkApp
                </a>
              </li>
              <li>
                <strong>
                  Daily fee: 
                </strong>
                Hourly: 30 min: $5, 1 hr: $10, 1.5 hrs: $15, 2 hrs: $20, 2.5 hrs: $25, 3+ hrs: $30 | Daily Max: $30 | Early Bird (in by 8:30 AM, out by 6 PM): $26 | Nights/Weekends: $10
              </li>
              <li>
                <strong>
                  Monthly pass: 
                </strong>
                $150 regular, $445 overnight
              </li>
            </ul>
          </div>
          <div
            id="parking-manager"
          >
            <div
              className="u-small-caps"
            >
              Management
            </div>
            <ul
              className="list-unstyled"
            >
              <li>
                <strong>
                  Managed by: 
                </strong>
                ProPark
              </li>
              <li>
                <strong>
                  Contact: 
                </strong>
                <a
                  href="https://www.propark.com/propark-locator2/south-station-garage/"
                >
                  ProPark
                </a>
              </li>
              <li>
                <strong>
                  Contact phone: 
                </strong>
                617-345-0202
              </li>
            </ul>
          </div>
          <div
            className="callout"
            id="parking-note"
          >
            <strong>
              Note: 
            </strong>
            An example note
          </div>
        </div>
      </Lot>
      <p>
        <a
          className="c-call-to-action"
          href="/parking"
        >
          Learn more about parking
        </a>
      </p>
    </div>
    <noscript>
      <style />
      <h3
        className="c-expandable-block__header"
      />
      <div
        className="c-expandable-block__panel"
        role="region"
      />
    </noscript>
  </ExpandableBlock>
</Parking>
`;
